syntax = "proto3";

message ProtoRequestVote
{
    int32 term = 1;
    int32 candidateId = 2;
    int32 lastLogIndex = 3;
    int32 lastLogTerm = 4;
}

message ProtoRequestVoteResponse
{
    int32 term = 1;
    bool voteGranted = 2;
}

message ProtoCommand
{
    string longURL = 1;
    string shortURL = 2;
}

message ProtoLogEntry
{
    int32 term = 1;
    int32 index = 2;
    ProtoCommand command = 3;
}

message ProtoAppendEntries
{
    int32 term = 1;
    int32 leaderId = 2;
    int32 prevLogIndex = 3;
    int32 prevLogTerm = 4;
    int32 commitIndex = 5;
    repeated ProtoLogEntry entries = 6;
}

message ProtoAppendEntriesResponse
{
    int32 term = 1;
    bool success = 2;
}